<resources>
    <string name="app_name">TableLayoutCalculadora</string>
    <string name="Clear">Clear</string>
    <string name="Dividir">/</string>
    <string name="Multiplicacion">*</string>
    <string name="Resta">-</string>
    <string name="Suma">+</string>
    <string name="Nueve">9</string>
    <string name="ocho">8</string>
    <string name="Siete">7</string>
    <string name="Seis">6</string>
    <string name="Cinco">5</string>
    <string name="Cuatro">4</string>
    <string name="Tres">3</string>
    <string name="Dos">2</string>
    <string name="Uno">1</string>
    <string name="Cero">0</string>
    <string name="Punto">.</string>
    <string name="Igual">=</string>
</resources>