<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="413dp"
        android:layout_height="234dp"
        android:gravity="center_vertical|end"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-1dp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="439dp"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado"
        tools:layout_editor_absoluteX="-16dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_span="3"
                android:background="#000000"
                android:text="@string/Clear" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Dividir" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Siete" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/ocho" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Nueve" />

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Multiplicacion" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Seis" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Cinco" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Cuatro" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Resta" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Uno" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Dos" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Tres" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Suma" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_span="2"
                android:text="@string/Cero" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Punto" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Igual" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>